Fix not cutting off "p" inside <pre/>

--- a/static/css/pico2.jade.override.css
+++ b/static/css/pico2.jade.override.css
@@ -20,6 +20,11 @@ body {
   }
 }
 
+pre {
+  border-radius: 0.3rem;
+  padding: var(--pico-spacing);
+}
+
 main > article {
   --pico-block-spacing-vertical: 2rem;
   background-color: transparent;
